# SmartBill-Python-SDK

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
examples/: async_taxes_and_stocks.py  create_estimate_sync.py  create_invoice_sync.py  create_payment_sync.py  fiscal_receipt_async.py  invoice_lifecycle_sync.py  list_series_sync.py  send_email_sync.py
skills/: README.md
skills/smartbill-email/: SKILL.md
skills/smartbill-invoices/: SKILL.md
skills/smartbill-payments/: SKILL.md
src/smartbill_sdk/: __init__.py  _transport.py  async_client.py  client.py  exceptions.py
src/smartbill_sdk/models/: __init__.py  common.py  config.py  email.py  estimates.py  invoices.py  payments.py  responses.py  stocks.py
src/smartbill_sdk/services/: __init__.py
tests/: conftest.py  test_estimates.py  test_invoices.py  test_misc.py  test_models.py  test_payments.py  test_transport.py
